# EECS249-Smart-Pill-Organizer

./: .gitignore  .gitmodules  README.md
eecs-249/smart-pill-organizer/: CMakeLists.txt  main.c
pico-canvas/PicoCanvas/: Podfile
pico-canvas/PicoCanvas/PicoCanvas/: AppDelegate.swift  Canvas.swift  CommandParser.swift  ControlPacketProvider.swift  OrientationManager.swift  SerialPortManager.swift  ViewController.swift
pico-canvas/PicoCanvas/PicoCanvas.xcodeproj/: project.pbxproj
pico-canvas/PicoCanvas/PicoCanvas.xcworkspace/: contents.xcworkspacedata
pico-canvas/PicoCanvas/PicoCanvas/Base.lproj/: Main.storyboard
pico-canvas/PicoCanvas/PicoCanvas/Command/: CommandParser.swift
pico-canvas/PicoCanvas/PicoCanvas/Drawing/: Canvas.swift  Drawing.swift  DrawingManager.swift
product/: build.sh  buildUbuntu.sh  buildWindows.sh  clean.sh  createPicoExecutable.sh
product/lib-support/: CMakeLists.txt  CMakeListsWindows.txt
product/lib-support/core/: TCS34725.c  TCS34725.h  platform.h  reactor.c
product/lib-support/core/platform/: lf_pico_clock_support.c  lf_pico_support.c  lf_pico_support.h  lf_pico_threads_support.c  lf_pico_threads_support.h
product/lib-support/waveshare/ColorSensor/: CMakeLists.txt  TCS34725.c  (+1 more)
product/smart-pill-organizer/src/: Main - Copy.lf  Main.lf  my_main.lf
product/smart-pill-organizer/src-gen/Main/: CMakeLists.txt  Main.c
product/smart-pill-organizer/src-gen/Main/core/platform/: lf_pico_clock_support.c  lf_pico_support.h  lf_pico_threads_support.c
product/waveshare/ColorSensor/: TCS34725 - Copy.c  TCS34725.c  TCS34725.h
(+9 files in other folders)
